# e-sh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml
assets/: AppIcon.icns  Info.plist  e-sh.desktop
doc/system_architecture/: v1.drawio
e-sh-rdp/: Cargo.toml
e-sh-rdp/src/: main.rs
scripts/: apply-icon-mask.py  build-release.ps1  build-release.sh  gen-icns.sh  make-app.sh
src/: app.rs  lib.rs  main.rs  updater.rs
src/config/: host_keys.rs  mod.rs  secrets.rs  store.rs  theme.rs
src/core/: connection.rs
src/proto/: local.rs  mod.rs  rdp.rs  sftp.rs  ssh.rs  vnc.rs
src/recording/: asciicast.rs  config.rs  manifest.rs  mod.rs  sftp_log.rs  writer.rs
src/ui/: command_palette.rs  connection_tree.rs  dock.rs  edit_dialog.rs  host_key_prompt.rs  master_password_prompt.rs  mod.rs  password_field.rs  rdp_tab.rs  recordings_view.rs  settings_tab.rs  sftp_tab.rs  status_bar.rs  toast.rs  vnc_tab.rs
src/ui/terminal_widget/: mod.rs  view.rs
