[package]
name = "e-sh"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
egui_dock = "0.19"
egui_extras = "0.34"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "fs",
] }
russh = "0.60"
russh-sftp = "2.1.1"
alacritty_terminal = "0.26"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
directories = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
age = "0.11"
base64 = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
