[package]
name = "e-sh"
version = "0.1.0"
edition = "2024"
description = "A unified cross-platform remote connection manager (SSH, SFTP) built in Rust with egui."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nexetry/e-sh"
repository = "https://github.com/nexetry/e-sh"
readme = "README.md"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
egui_dock = "0.19"
egui_extras = "0.34"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "fs",
    "process",
] }
russh = "0.60"
russh-sftp = "2.1.1"
alacritty_terminal = "0.26"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
directories = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
age = "0.11"
base64 = "0.22"
nucleo-matcher = "0.3"
flate2 = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1

[package.metadata.deb]
maintainer = "nexetry <hello@nexetry.com>"
copyright = "2026, nexetry"
section = "net"
priority = "optional"
assets = [
    ["target/release/e-sh", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/e-sh/README.md", "644"],
    ["assets/e-sh.desktop", "usr/share/applications/", "644"],
]
extended-description = """\
e-sh is a single-binary, keyboard-first remote connection manager for SSH \
and SFTP, with a native egui UI. It supports password / pubkey / SSH-agent \
auth, TOFU host-key pinning, chained jump hosts, SSH tunnels (-L/-R/-D), \
and a dual-pane SFTP browser with drag-drop transfers.\
"""
depends = "libgtk-3-0, libxcb1, libxkbcommon0, libssl3, libdbus-1-3"

[package.metadata.wix]
upgrade-guid = "E5E5A2E1-5E5A-4E5A-8E5A-5E5A2E15E5A2"
path-guid = "E5E5A2E1-5E5A-4E5A-8E5A-5E5A2E15E5A3"
license = false
eula = false
