[package]
name = "e-sh"
version = "2.5.0"
edition = "2024"
authors = ["chakyiu <lcyharry@hotmail.com>"]
description = "A unified cross-platform remote connection manager (SSH, SFTP, RDP, VNC) built in Rust with egui."
license = "MIT"
homepage = "https://github.com/Nexetry/e-sh"
repository = "https://github.com/Nexetry/e-sh"
readme = "README.md"
build = "build.rs"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
egui_dock = "0.19"
egui_extras = "0.34"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "fs",
    "process",
] }
russh = "0.60.2"
russh-sftp = "2.1.2"
alacritty_terminal = "0.26"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
directories = "6"
anyhow = "1"
des = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"
portable-pty = "0.9.0"
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.17"
age = "0.11"
base64 = "0.22"
nucleo-matcher = "0.3"
flate2 = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "json",
] }
semver = "1"
open = "5"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"
ico = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = "thin"
codegen-units = 1

[package.metadata.deb]
maintainer = "nexetry <support@nexetry.com>"
copyright = "2026, nexetry"
section = "net"
priority = "optional"
assets = [
    [
        "target/release/e-sh",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/e-sh-rdp",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/e-sh/README.md",
        "644",
    ],
    [
        "assets/e-sh.desktop",
        "usr/share/applications/",
        "644",
    ],
]
extended-description = """\
e-sh is a single-binary, keyboard-first remote connection manager for SSH, \
SFTP, RDP, and VNC, with a native egui UI. It supports password / pubkey / \
SSH-agent auth, TOFU host-key pinning, chained jump hosts, SSH tunnels \
(-L/-R/-D), a dual-pane SFTP browser with drag-drop transfers, an RDP viewer \
with IronRDP + FreeRDP backends, and a pure-Rust VNC viewer.\
"""
depends = "libgtk-3-0, libxcb1, libxkbcommon0, libssl3, libdbus-1-3"

[package.metadata.wix]
upgrade-guid = "61849195-B290-4B99-B19B-B22274AF13F9"
path-guid = "26011BA9-1505-4549-AD80-B14B84757EE4"
license = false
eula = false
